--- a/pom.xml
+++ b/pom.xml
@@ -25,4 +25,17 @@
       </plugin>
     </plugins>
   </build>
+	<distributionManagement>
+	<repository>
+		<id>deploymentRepo</id>
+		<name>Internal Releases</name>
+		<url>http://35.196.242.240:8081/repository/maven-releases/</url>
+	</repository>
+ 
+	<snapshotRepository>
+		<id>deploymentRepo</id>
+		<name>Internal Releases</name>
+		<url>http://35.196.242.240:8081/repository/maven-snapshots/</url>
+	</snapshotRepository>
+</distributionManagement>
 </project>
